src/index.css
/*:root {
  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
  line-height: 1.5;
  font-weight: 400;

  color-scheme: light dark;
  color: rgba(255, 255, 255, 0.87);
  background-color: #242424;

  font-synthesis: none;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

a {
  font-weight: 500;
  color: #646cff;
  text-decoration: inherit;
}
a:hover {
  color: #535bf2;
}

body {
  margin: 0;
  display: flex;
  place-items: center;
  min-width: 320px;
  min-height: 100vh;
}

h1 {
  font-size: 3.2em;
  line-height: 1.1;
}

button {
  border-radius: 8px;
  border: 1px solid transparent;
  padding: 0.6em 1.2em;
  font-size: 1em;
  font-weight: 500;
  font-family: inherit;
  background-color: #1a1a1a;
  cursor: pointer;
  transition: border-color 0.25s;
}
button:hover {
  border-color: #646cff;
}
button:focus,
button:focus-visible {
  outline: 4px auto -webkit-focus-ring-color;
}

@media (prefers-color-scheme: light) {
  :root {
    color: #213547;
    background-color: #ffffff;
  }
  a:hover {
    color: #747bff;
  }
  button {
    background-color: #f9f9f9;
  }
}*/

@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap');

#root {
  font-family: 'Poppins', sans-serif;
}

body {
  background-color: white;
  color: black;
}

li {
  list-style: none;
}

.container {
  display: flex;
  justify-content: space-evenly;
  align-items: flex-start;
  margin: auto;
  position: relative;
}

.mini-container {
  display: flex;
  justify-content: space-evenly;
  flex-direction: column;
  margin: 25px;
  padding: 15px;
  border-radius: 15px;
  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
}

.mini-header {
  height: 25px;
  padding-top: 10px;
  padding-bottom: 10px;
  background-color: rgb(226, 195, 147);
  text-align: center;
  border-radius: 10px;
  width: 93%;
  margin: 0;
}

.wrong {
  background-color: rgb(219, 93, 93);
}

.correct {
  background-color: rgb(191, 116, 191);
}

.answer-space {
  background-color: rgb(226, 195, 147);
  height: 20px;
  padding-top: 10px;
  padding-bottom: 10px;
  width: auto;
  margin-bottom: 20px;
  border-radius: 15px;
  margin-left: auto;
  clear: both;
}

li {
  margin-top: 3px;
  margin-bottom: 3px;
  margin-right: 10%;
  margin-left: 10%;
  background-color: #FFFDD0;
  border-radius: 15px;
}

button.newdrink {
  width: auto;
  text-align: center;
}

.button {
  background-color: rgba(138, 98, 12, 0.942);
  font-weight: bold;
  color: white;
}

.title {
  display: inline-block;
  margin-bottom: 0;
}

.title-container {
  text-align: left;
  margin-bottom: 50px;
}

.drink-container {
  display: flex;
  justify-content: space-between;
}

.textbox {
  width: 200px;
  padding: 8px;
  margin-bottom: 10px;
  border-radius: 8px;
  border: 2px solid #ccc;
  font-size: 1rem;
}

